Question 1 content/ added button

--- a/index.html
+++ b/index.html
@@ -96,8 +96,9 @@ https://stackoverflow.com/questions/8211128/multiple-distinct-pages-in-one-html-
 	</div>
 	
     	<div id="content" class="w3-container">
-        <p>Put Question 1 content here.</p>    
+        <p>Are your eyes watery or itchy?</p>    
     	</div>
+	<a href="#two" class="w3-btn w3-black"> Go to Page Two </a>
 </div>
 
 <div class="page" id="two">
