--- a/index.html
+++ b/index.html
@@ -89,7 +89,9 @@ https://stackoverflow.com/questions/8211128/multiple-distinct-pages-in-one-html-
 	<p>The following code has been developed by students and/or researchers of the Freshman Research Initiative DIY Diagnostics Stream at The University of Texas at 		Austin.  This code is shared for demonstration purposes and should not be considered a product -- it is for entertainment purposes only. Any user of this code 			does so at their own risk. Members of the DIY Stream, FRI, and The University of Texas system are not liable for anything related to this code.</p>
  	
 	<p>THIS CODE SHOULD NOT BE USED TO DIAGNOSE ANY KIND OF MEDICAL CONDITION.</p>
-
+	
+<!-- The first thing I did, following experiementing with buttons, was add all of my "question" pages.
+ -->
 <div class="page" id="one">
 	<div id="header" class="w3-container w3-flat-carrot">
 		<h1>Question 1</h1>
@@ -97,7 +99,8 @@ https://stackoverflow.com/questions/8211128/multiple-distinct-pages-in-one-html-
 	
     	<div id="content" class="w3-container">
         <p>Are your eyes watery or itchy?</p>    
-	<a href="#two" class="w3-btn w3-black"> Go to Page Two </a>
+	<a href="#two"  onclick="allergyAdd();" class="w3-btn w3-black"> Yes</a>
+	<a href="#two"  onclick="coldAdd();" class="w3-btn w3-black">No</a>
 	</div>
 </div>
 
@@ -108,7 +111,8 @@ https://stackoverflow.com/questions/8211128/multiple-distinct-pages-in-one-html-
 	
 	<div id="content" class="w3-container">
 	<p>Do you have a fever?</p>
-	<a href="#three" class="w3-btn w3-black"> Go to Page Three </a>
+	<a href="#three"  onclick="allergyAdd();" class="w3-btn w3-black"> Yes</a>
+	<a href="#three"  onclick="coldAdd();" class="w3-btn w3-black">No</a>
 	</div>
 </div>
 	
@@ -119,7 +123,8 @@ https://stackoverflow.com/questions/8211128/multiple-distinct-pages-in-one-html-
 	
     	<div id="content" class="w3-container">
         <p>Do you have a sore throat?</p>    
-    	<a href="#four" class="w3-btn w3-black"> Go to Page Four </a>
+	<a href="#four"  onclick="allergyAdd();" class="w3-btn w3-black"> Yes</a>
+	<a href="#four"  onclick="coldAdd();" class="w3-btn w3-black">No</a>
 	</div>
 </div>
 	
@@ -130,9 +135,12 @@ https://stackoverflow.com/questions/8211128/multiple-distinct-pages-in-one-html-
 	
     	<div id="content" class="w3-container">
         <p>Are your symptoms seasonal or chronic?</p>    
-    	<a href="#five" class="w3-btn w3-black"> Go to Page Five </a>
+    	<a href="#five"  onclick="allergyAdd();" class="w3-btn w3-black"> Yes</a>
+	<a href="#five"  onclick="coldAdd();" class="w3-btn w3-black">No</a>
 	</div>
 </div>
+<!-- After inputting the preestablished questions, I did some researh and added a few questions of my own. I added pages and buttons for these following the format of the previous pages.
+ -->
 	
 <div class="page" id="five">
 	<div id="header" class="w3-container w3-flat-carrot">
@@ -140,8 +148,56 @@ https://stackoverflow.com/questions/8211128/multiple-distinct-pages-in-one-html-
 	</div>
 	
     	<div id="content" class="w3-container">
-        <p>Have you been experiencing symptoms for more than 10 days?</p>    
+        <p>Have you been experiencing symptoms for more than 10 days?</p> 
+	<a href="#six"  onclick="allergyAdd();" class="w3-btn w3-black"> Yes</a>
+	<a href="#six"  onclick="coldAdd();" class="w3-btn w3-black">No</a>
     	</div>
+</div>
+   
+<div class="page" id="six">
+	<div id="header" class="w3-container w3-flat-carrot">
+		<h1>Question 6</h1>
+	</div>
+	
+	<div id="content" class="w3-container">
+        <p>Have you been experiencing symptoms for more than 10 days?</p> 
+	<a href="#seven"  onclick="allergyAdd();" class="w3-btn w3-black"> Yes</a>
+	<a href="#seven"  onclick="coldAdd();" class="w3-btn w3-black">No</a>
+	</div>
+</div>
+
+<div class="page" id="seven">
+	<div id="header" class="w3-container w3-flat-carrot">
+		<h1>Question 7</h1>
+	</div>
+	
+	<div id="content" class="w3-container">
+        <p>Have you been experiencing symptoms for more than 10 days?</p> 
+	<a href="#eight"  onclick="allergyAdd();" class="w3-btn w3-black"> Yes</a>
+	<a href="#eight"  onclick="coldAdd();" class="w3-btn w3-black">No</a>
+	</div>
+</div>
+
+<div class="page" id="eight">
+	<div id="header" class="w3-container w3-flat-carrot">
+		<h1>Your results are being calculated.</h1>
+	</div>
+	
+	<div id="content" class="w3-container">
+        <p>Click below to see your results.</p> 
+	<a href="#results" class="w3-btn w3-black"> Results </a>
+	</div>
+</div>
+
+<div class="page" id="results">
+	<div id="header" class="w3-container w3-flat-carrot">
+		<h1>Your results are being calculated.</h1>
+	</div>
+	
+	<div id="content" class="w3-container">
+        <p>Click below to see your results.</p> 
+	<a href="#results" class="w3-btn w3-black"> Results </a>
+	</div>
 </div>
 	
 <footer class="w3-bottom w3-container w3-flat-carrot">
