added variable in question 1 (Add[1])

--- a/index.html
+++ b/index.html
@@ -113,8 +113,8 @@ https://stackoverflow.com/questions/8211128/multiple-distinct-pages-in-one-html-
 	<p>Do you have a fever?</p>
 <!-- I had to make sure to switch the components that corresponded with "yes" and "no" below so I could get accurate results. I used this technique whenever the "yes" corresponded with the symptoms of a cold.
  -->
-	<a href="#three"  onclick="coldAdd();" class="w3-btn w3-black"> Yes</a>
-	<a href="#three"  onclick="allergyAdd();" class="w3-btn w3-black">No</a>
+	<a href="#three"  onclick="coldAdd(1);" class="w3-btn w3-black"> Yes</a>
+	<a href="#three"  onclick="allergyAdd(1);" class="w3-btn w3-black">No</a>
 	</div>
 </div>
 	
