added results html

--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@ https://stackoverflow.com/questions/8211128/multiple-distinct-pages-in-one-html-
 	</div>
 	
 	<div id="content" class="w3-container">
-        <p>Click below to see your results.</p> 
+        <p>resultText.innerHTML = "Probability it is allergies =" + allergyPercent + "<br> Probability it is a cold =" + coldPercent; </p> 
 	<a href="#results" class="w3-btn w3-black"> Results </a>
 	</div>
 </div>
