--- a/index.html
+++ b/index.html
@@ -43,13 +43,19 @@ https://stackoverflow.com/questions/8211128/multiple-distinct-pages-in-one-html-
         function allergyAdd(){
             allergy_count = allergy_count + 1;
 		alert(allergy_count);
-
         }
 
         function coldAdd(){
             cold_count = cold_count + 1;
         }
-
+	
+	function resultscalculator(){
+	var resultText = dovument.getElementById("results");
+	var allergyPercent = (allergy_count / (allergy_count + cold_count)) * 100;
+	var coldPercent = (cold_count / (allergy_count + cold_count)) * 100;
+	resultText.innerHTML = "Probability it is allergies =" + allergyPercent + "%" "<br> Probability it is a cold =" + coldPercent + "%";
+	}
+	
   </script>
 
 
