deleted pg7 and calculation pg

--- a/index.html
+++ b/index.html
@@ -169,31 +169,8 @@ https://stackoverflow.com/questions/8211128/multiple-distinct-pages-in-one-html-
 	
 	<div id="content" class="w3-container">
         <p>If you have a runny nose, is the mucus thick/yellow?</p> 
-	<a href="#seven"  onclick="coldAdd();" class="w3-btn w3-black"> Yes</a>
-	<a href="#seven"  onclick="allergyAdd();" class="w3-btn w3-black">No</a>
-	</div>
-</div>
-
-<div class="page" id="seven">
-	<div id="header" class="w3-container w3-flat-carrot">
-		<h1>Question 7</h1>
-	</div>
-	
-	<div id="content" class="w3-container">
-        <p>Have you been experiencing symptoms for more than 10 days?</p> 
-	<a href="#calculation"  onclick="allergyAdd();" class="w3-btn w3-black"> Yes</a>
-	<a href="#calculation"  onclick="coldAdd();" class="w3-btn w3-black">No</a>
-	</div>
-</div>
-
-<div class="page" id="calculation">
-	<div id="header" class="w3-container w3-flat-carrot">
-		<h1>Your results are being calculated.</h1>
-	</div>
-	
-	<div id="content" class="w3-container">
-        <p>Click below to see your results.</p> 
-	<a href="#results" class="w3-btn w3-black"> Results </a>
+	<a href="#results"  onclick="coldAdd();" class="w3-btn w3-black"> Yes</a>
+	<a href="#results"  onclick="allergyAdd();" class="w3-btn w3-black">No</a>
 	</div>
 </div>
 
