--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@ https://stackoverflow.com/questions/8211128/multiple-distinct-pages-in-one-html-
 </div>
 
 <div class="page" id="results">
-	<div id="header" class="w3-container w3-flat-carrot">
+	<div class="w3-container w3-flat-carrot">
 		<h1>Here are your results.</h1>
 	</div>
 	
