deleted alert and misspelled "document" in script

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@ https://stackoverflow.com/questions/8211128/multiple-distinct-pages-in-one-html-
 
         function allergyAdd(){
             allergy_count = allergy_count + 1;
-		alert(allergy_count);
+	
         }
 
         function coldAdd(){
@@ -50,7 +50,7 @@ https://stackoverflow.com/questions/8211128/multiple-distinct-pages-in-one-html-
         }
 	
 	function resultscalculator(){
-	var resultText = dovument.getElementById("finalresults");
+	var resultText = document.getElementById("finalresults");
 	var allergyPercent = (allergy_count / (allergy_count + cold_count)) * 100;
 	var coldPercent = (cold_count / (allergy_count + cold_count)) * 100;
 	resultText.innerHTML = "Probability it is allergies =" + allergyPercent + "%" "<br> Probability it is a cold =" + coldPercent + "%";
