--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@ https://stackoverflow.com/questions/8211128/multiple-distinct-pages-in-one-html-
 	var resultText = document.getElementById("results");
 	var allergyPercent = (allergy_count / (allergy_count + cold_count)) * 100;
 	var coldPercent = (cold_count / (allergy_count + cold_count)) * 100;
-	resultText.innerHTML = "Probability it is allergies =" + allergyPercent + "%" "<br> Probability it is a cold =" + coldPercent + "%";
+	resultText.innerHTML = "Probability it is allergies =" + allergyPercent + "%" + "<br> Probability it is a cold =" + coldPercent + "%";
 	}
 	
   </script>
