--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@ https://stackoverflow.com/questions/8211128/multiple-distinct-pages-in-one-html-
 	</div>
 	
 	<div id="content" class="w3-container">
-        	<p> id="finalresults"</p> 
+        	<p> Click below to see your results!</p> 
 		<a onclick="resultscalculator();" class="w3-container w3-flat-carrot"> Results! </a>
 		
 	</div>
