changed container to btn in "results"

--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@ https://stackoverflow.com/questions/8211128/multiple-distinct-pages-in-one-html-
 	
 	<div id="content" class="w3-container">
         	<p> Click below to see your results!</p> 
-		<a onclick="resultscalculator();" class="w3-container w3-flat-carrot"> Results! </a>
+		<a onclick="resultscalculator();" class="w3-btn w3-black"> Results! </a>
 		
 	</div>
 </div>
