tried to combine "calculation" and "results"

--- a/index.html
+++ b/index.html
@@ -176,21 +176,21 @@ https://stackoverflow.com/questions/8211128/multiple-distinct-pages-in-one-html-
 
 <div class="page" id="calculation">
  	<div id="header" class="w3-container w3-flat-carrot">
- 		<h1>Your results are being calculated.</h1>
+ 		<h1>Test header.</h1>
  	</div>
 
  	<div id="content" class="w3-container">
-         <p>Click below to see your results.</p> 
- 	<a href="#results" class="w3-btn w3-black"> Results! </a>
+         <p>Test</p> 
+ 	<a href="#results" class="w3-btn w3-black"> pls work </a>
 
 <div class="page" id="results">
 	<div id="header" class="w3-container w3-flat-carrot">
-		<h1>Here are your results.</h1>
+		<h1>Your results are being calculated.</h1>
 	</div>
 	
 	<div id="content" class="w3-container">
-        	<p> Click below to see your results!</p> 
-		<a onclick="resultscalculator();" class="w3-btn w3-black"> Results! </a>
+        	<p> Click below to see your results.</p> 
+		<a href="#results" onclick="resultscalculator();" class="w3-btn w3-black"> Results! </a>
 		
 	</div>
 </div>
