deleted "calculations" again

--- a/index.html
+++ b/index.html
@@ -169,19 +169,11 @@ https://stackoverflow.com/questions/8211128/multiple-distinct-pages-in-one-html-
 	
 	<div id="content" class="w3-container">
         <p>If you have a runny nose, is the mucus thick/yellow?</p> 
-	<a href="#calculation"  onclick="coldAdd();" class="w3-btn w3-black"> Yes</a>
-	<a href="#calculation"  onclick="allergyAdd();" class="w3-btn w3-black">No</a>
+	<a href="#results"  onclick="coldAdd();" class="w3-btn w3-black"> Yes</a>
+	<a href="#results"  onclick="allergyAdd();" class="w3-btn w3-black">No</a>
 	</div>
 </div>
 
-<div class="page" id="calculation">
- 	<div id="header" class="w3-container w3-flat-carrot">
- 		<h1>Test header.</h1>
- 	</div>
-
- 	<div id="content" class="w3-container">
-         <p>Test</p> 
- 	<a href="#results" class="w3-btn w3-black"> pls work </a>
 
 <div class="page" id="results">
 	<div id="header" class="w3-container w3-flat-carrot">
