--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@ https://stackoverflow.com/questions/8211128/multiple-distinct-pages-in-one-html-
 <div id="content" class="w3-container">
 	<p>Are you feeling like you might have a cold but wonder if it is allergies? Answer a few short questions to find out!</p>
 	
-	<a href="#one" class="w3-btn w3-grey w3-round"> Get Started </a>
+	<a href="#one" class="w3-btn w3-light-blue w3-round"> Get Started </a>
 	
 	<p>The following code has been developed by students and/or researchers of the Freshman Research Initiative DIY Diagnostics Stream at The University of Texas at 		Austin.  This code is shared for demonstration purposes and should not be considered a product -- it is for entertainment purposes only. Any user of this code 			does so at their own risk. Members of the DIY Stream, FRI, and The University of Texas system are not liable for anything related to this code.</p>
  	
@@ -105,8 +105,8 @@ https://stackoverflow.com/questions/8211128/multiple-distinct-pages-in-one-html-
 	
     	<div id="content" class="w3-container">
         <p>Are your eyes watery or itchy?</p>    
-	<a href="#two"  onclick="allergyAdd();" class="w3-btn w3-purple w3-round"> Yes</a>
-	<a href="#two"  onclick="coldAdd();" class="w3-btn w3-purple w3-round">No</a>
+	<a href="#two"  onclick="allergyAdd();" class="w3-btn w3-blue-grey w3-round"> Yes</a>
+	<a href="#two"  onclick="coldAdd();" class="w3-btn w3-blue-grey w3-round">No</a>
 	</div>
 </div>
 
@@ -119,8 +119,8 @@ https://stackoverflow.com/questions/8211128/multiple-distinct-pages-in-one-html-
 	<p>Do you have a fever?</p>
 <!-- I had to make sure to switch the components that corresponded with "yes" and "no" below so I could get accurate results. I used this technique whenever the "yes" corresponded with the symptoms of a cold.
  -->
-	<a href="#three"  onclick="coldAdd(1);" class="w3-btn w3-purple w3-round"> Yes</a>
-	<a href="#three"  onclick="allergyAdd(1);" class="w3-btn w3-purple w3-round">No</a>
+	<a href="#three"  onclick="coldAdd(1);" class="w3-btn w3-blue-grey w3-round"> Yes</a>
+	<a href="#three"  onclick="allergyAdd(1);" class="w3-btn w3-blue-grey w3-round">No</a>
 	</div>
 </div>
 	
@@ -131,8 +131,8 @@ https://stackoverflow.com/questions/8211128/multiple-distinct-pages-in-one-html-
 	
     	<div id="content" class="w3-container">
         <p>Do you have a sore throat?</p>    
-	<a href="#four"  onclick="coldAdd();" class="w3-btn w3-purple w3-round"> Yes</a>
-	<a href="#four"  onclick="allergyAdd();" class="w3-btn w3-purple w3-round">No</a>
+	<a href="#four"  onclick="coldAdd();" class="w3-btn w3-blue-grey w3-round"> Yes</a>
+	<a href="#four"  onclick="allergyAdd();" class="w3-btn w3-blue-grey w3-round">No</a>
 	</div>
 </div>
 	
@@ -143,8 +143,8 @@ https://stackoverflow.com/questions/8211128/multiple-distinct-pages-in-one-html-
 	
     	<div id="content" class="w3-container">
         <p>Are your symptoms seasonal or chronic?</p>    
-    	<a href="#five"  onclick="allergyAdd();" class="w3-btn w3-purple w3-round"> Yes</a>
-	<a href="#five"  onclick="coldAdd();" class="w3-btn w3-purple w3-round">No</a>
+    	<a href="#five"  onclick="allergyAdd();" class="w3-btn w3-blue-grey w3-round"> Yes</a>
+	<a href="#five"  onclick="coldAdd();" class="w3-btn w3-blue-grey w3-round">No</a>
 	</div>
 </div>
 <!-- After inputting the preestablished questions, I did some researh and added a few questions of my own. I added pages and buttons for these following the format of the previous pages.
@@ -157,8 +157,8 @@ https://stackoverflow.com/questions/8211128/multiple-distinct-pages-in-one-html-
 	
     	<div id="content" class="w3-container">
         <p>Have you been experiencing symptoms for more than 10 days?</p> 
-	<a href="#six"  onclick="allergyAdd();" class="w3-btn w3-purple w3-round"> Yes</a>
-	<a href="#six"  onclick="coldAdd();" class="w3-btn w3-purple w3-round">No</a>
+	<a href="#six"  onclick="allergyAdd();" class="w3-btn w3-blue-grey w3-round"> Yes</a>
+	<a href="#six"  onclick="coldAdd();" class="w3-btn w3-blue-grey w3-round">No</a>
     	</div>
 </div>
    
@@ -169,8 +169,8 @@ https://stackoverflow.com/questions/8211128/multiple-distinct-pages-in-one-html-
 	
 	<div id="content" class="w3-container">
         <p>If you have a runny nose, is the mucus thick/yellow?</p> 
-	<a href="#results"  onclick="coldAdd();" class="w3-btn w3-purple w3-round"> Yes</a>
-	<a href="#results"  onclick="allergyAdd();" class="w3-btn w3-purple w3-round">No</a>
+	<a href="#results"  onclick="coldAdd();" class="w3-btn w3-blue-grey w3-round"> Yes</a>
+	<a href="#results"  onclick="allergyAdd();" class="w3-btn w3-blue-grey w3-round">No</a>
 	</div>
 </div>
 
@@ -182,7 +182,7 @@ https://stackoverflow.com/questions/8211128/multiple-distinct-pages-in-one-html-
 	
 	<div id="content" class="w3-container">
         	<p> Click below to see your results.</p> 
-		<a href="#results" onclick="resultscalculator();" class="w3-btn w3-purple w3-round"> Results! </a>
+		<a href="#results" onclick="resultscalculator();" class="w3-btn w3-blue-grey w3-round"> Results! </a>
 		
 	</div>
 </div>
